SET(LIBNAME "lua_grind")
SET(WRAPPERS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/wrappers)
SET(WRAPPER "${WRAPPERS_DIR}/${LIBNAME}_wrap.cxx")

# generate Python bindings
ADD_CUSTOM_COMMAND(
  OUTPUT ${WRAPPER}
  COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/generate_wrappers.py ${CMAKE_CURRENT_SOURCE_DIR}
  "Generating grind Lua bindings using SWIG")

ADD_DEFINITIONS("-std=c++0x")

# the bindings library
ADD_LIBRARY(${LIBNAME} SHARED ${WRAPPER} ${GRIND_FILES})
SET_TARGET_PROPERTIES(${LIBNAME} PROPERTIES PREFIX "")
SET_SOURCE_FILES_PROPERTIES( ${WRAPPER} PROPERTIES GENERATED 1)

ADD_CUSTOM_TARGET(${LIBNAME}_SWIG DEPENDS ${WRAPPER})

IF(NOT EXISTS "${WRAPPER}")
  MESSAGE(STATUS "grind Lua SWIG bindings are not yet generated, forcing generation. Generate manually using make ${LIBNAME}_SWIG")
  ADD_DEPENDENCIES(${LIBNAME} ${LIBNAME}_SWIG)
ENDIF()

INSTALL(TARGETS ${LIBNAME} DESTINATION lib)
